--- a/app/views/blog_posts/_latest_discussion_posts.html.haml
+++ b/app/views/blog_posts/_latest_discussion_posts.html.haml
@@ -1,5 +1,5 @@
 %h3= link_to 'Latest discussion posts', discussion_posts_path
-- @latest_discussion_posts.each do |post|
+- DiscussionPost.published.recent(4).each do |post|
   = render partial: 'shared/sidebar_item',
            locals: { date: post.created_at, 
              content: "#{link_to post.title, discussion_post_path( post )}".html_safe,
