--- a/app/views/blog_posts/_popular_posts.html.haml
+++ b/app/views/blog_posts/_popular_posts.html.haml
@@ -1,5 +1,5 @@
 %h3 Popular posts
-- @popular_posts.each do |post|
+- BlogPost.by_popularity(5).each do |post|
 
   = render partial: 'shared/sidebar_item',
            locals: { date: post.created_at,
