--- a/app/views/shared/_opengraph.html.erb
+++ b/app/views/shared/_opengraph.html.erb
@@ -12,5 +12,5 @@
     <% if @og_desc %>
       <meta property="og:description" content="<%= strip_tags(strip_links(sanitize(markdown @og_desc))) %>"/>
     <% else %>
-      <meta property="og:description" content="80,000 Hours is an organisation which supports and guides people who are pursuing careers which will allow them to do the most good in the world."/>
+      <meta property="og:description" content="At 80,000 Hours, we share free evidence-based advice on careers that make a difference. How can you make the world a better place?"/>
     <% end %>
