Google Analytics event tracking

--- a/app/views/shared/_google_analytics.html.erb
+++ b/app/views/shared/_google_analytics.html.erb
@@ -3,6 +3,7 @@
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-27180853-1']);
     _gaq.push(['_trackPageview']);
+    <%= render "shared/google_analytics_events" %>
   
     (function() {
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
