Added contact email to members' profiles

--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -10,8 +10,9 @@
   .location {
     font-weight: normal;
     color: lighten($text_color,50%);
+    margin-bottom: 0.3em;
   }
-
+  
   .sidebar {
     padding-top: 40px;
     font-size: 0.8em;
@@ -64,4 +65,5 @@
       color: lighten($text_color,50%);
     }
   }
+
 }
