Created partial for maillist signup and placed it on blog

--- a/app/assets/stylesheets/eightythousand.scss
+++ b/app/assets/stylesheets/eightythousand.scss
@@ -462,3 +462,13 @@ input[type="email"] {
   vertical-align: center;
 }
 
+.mail-list-signup {
+  .join-txt {
+    margin-bottom: 0.4em;
+  }
+  .email-address-input {
+    float: left;
+    width: 170px;
+    margin-right: 1em
+  }
+}
