--- a/app/views/blog_posts/_subscribe.html.haml
+++ b/app/views/blog_posts/_subscribe.html.haml
@@ -7,9 +7,4 @@
       %a{:href => '/blog/feed.atom'} Subscribe via RSS
     .clearfix
   .subscribe-option
-    .social-btn-email
-      %a{:href => 'http://80000hours.us2.list-manage.com/subscribe?u=aba12f58bbe8075560abdc5b7&id=43bc1ae55c&group[1][1]=true'}
-    .subscribe-text
-      %a{:href => 'http://80000hours.us2.list-manage.com/subscribe?u=aba12f58bbe8075560abdc5b7&id=43bc1ae55c&group[1][1]=true'} Join our mailing list
-
-
+    = render partial: "./shared/mailing_list"
