--- a/app/views/pages/dashboard.html.haml
+++ b/app/views/pages/dashboard.html.haml
@@ -91,6 +91,8 @@
       %p &nbsp;
     .span4.dashboard.blog.box.sidebar.blog-sidebar
       %br
+      = render partial: "./shared/mailing_list"
+      %hr
       = render :partial => "blog_posts/popular_posts"
       %hr
       = render :partial => "blog_posts/latest_discussion_posts"
