Updated text on maillist signup

--- a/app/views/shared/_mailing_list.html.erb
+++ b/app/views/shared/_mailing_list.html.erb
@@ -1,5 +1,5 @@
 <div class='mail-list-signup'>
-	<p class='join-txt'>Join our mailing list</p>
+	<p class='join-txt'>Get updates on the best of the blog</p>
 
 	<input class='email-address-input' placeholder='Enter your email address' type='text' href='http://80000hours.us2.list-manage.com/subscribe?u=aba12f58bbe8075560abdc5b7&id=43bc1ae55c&group[1][1]=true'>
 
