--- a/app/views/shared/_mailing_list.html.erb
+++ b/app/views/shared/_mailing_list.html.erb
@@ -1,10 +1,10 @@
 <div class='mail-list-signup'>
 	<p class='join-txt'>Get updates on the best of the blog</p>
 
-	<input class='email-address-input' placeholder='Enter your email address' type='text' href='http://80000hours.us2.list-manage.com/subscribe?u=aba12f58bbe8075560abdc5b7&id=43bc1ae55c&group[1][1]=true'>
+	<input class='email-address-input' placeholder='Enter your email address' type='text'>
 
-	<div class='submit'>
-		<a class='btn btn-primary'>Submit</a>
+	<div class='submit' >
+		<a class='btn btn-primary' href='http://80000hours.us2.list-manage.com/subscribe?u=aba12f58bbe8075560abdc5b7&id=43bc1ae55c&group[1][1]=true'>Submit</a>
 	</div>
 </div>
 
