Edited mailing_list partial to accept a variable for the label text

--- a/app/views/shared/_mailing_list.html.erb
+++ b/app/views/shared/_mailing_list.html.erb
@@ -1,5 +1,5 @@
 <div class='mail-list-signup'>
-	<p class='join-txt'>Get updates on the best of the blog</p>
+	<p class='join-txt'><%= text %></p>
 
 	<input class='email-address-input' placeholder='Enter your email address' type='text'>
 
