Edited 'subscribe' partial to pass text to mailing_list

--- a/app/views/blog_posts/_subscribe.html.haml
+++ b/app/views/blog_posts/_subscribe.html.haml
@@ -7,4 +7,4 @@
       %a{:href => '/blog/feed.atom'} Subscribe via RSS
     .clearfix
   .subscribe-option
-    = render partial: "./shared/mailing_list"
+    = render partial: "./shared/mailing_list", locals: { text: "Get updates on the best of the blog" }
