--- a/app/views/pages/dashboard.html.haml
+++ b/app/views/pages/dashboard.html.haml
@@ -91,7 +91,7 @@
       %p &nbsp;
     .span4.dashboard.blog.box.sidebar.blog-sidebar
       %br
-      = render partial: "./shared/mailing_list"
+      = render partial: "./shared/mailing_list", locals: { text: "Get updates on the best of the blog" }
       %hr
       = render :partial => "blog_posts/popular_posts"
       %hr
