Created event booking form for Healthcare event

--- a/app/assets/stylesheets/eightythousand.scss
+++ b/app/assets/stylesheets/eightythousand.scss
@@ -476,3 +476,7 @@ input[type="email"] {
 .ui-accordion-content {
   a { color: $link_color !important; }
 }
+
+.event-booking-request {
+  .complete { color: #FF0000 }
+}
