--- a/app/views/pages/dashboard.html.haml
+++ b/app/views/pages/dashboard.html.haml
@@ -19,7 +19,7 @@
               
               <p><a href="/how-to-choose" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Read_articles', '/how-to-choose']);">A step-by-step process for choosing a career</a></p>
             
-              <p>Also take a look at our <a href="/causes" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Read_articles', '/career-resources']);">most useful blog posts</a></p>
+              <p>Also take a look at our <a href="/blog?order=votes" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Read_articles', '/blog?order=votes']);">most useful blog posts</a></p>
 
         .row.user-activity-block
           .span3
