--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,6 +5,17 @@
   - if @user.etkh_profile
     #{@user.name} is an 80,000 Hours member. #{link_to 'View their profile here', (etkh_profile_path @user)}.
 
+  - if @user.blog_posts.any?
+    .page-header
+      %h2 Blog posts
+    
+    - sorted_posts = @user.blog_posts.by_votes
+    - sorted_posts.each do |post|
+      - if !post.draft || post.user == current_user
+        .blog
+          = render :partial => 'blog_posts/display_heading',
+                   :locals => { :post => post }
+
   - if @user.discussion_posts.any?
     .page-header
       %h2 Discussion posts
@@ -13,16 +24,6 @@
       - if !post.draft || post.user == current_user
         .blog
           = render :partial => 'discussion_posts/display_heading',
-                   :locals => { :post => post }
-
-  - if @user.blog_posts.any?
-    .page-header
-      %h2 Blog posts
-    
-    - @user.blog_posts.each do |post|
-      - if !post.draft || post.user == current_user
-        .blog
-          = render :partial => 'blog_posts/display_heading',
                    :locals => { :post => post }
 
   - if @user.comments.any?
