--- a/app/assets/stylesheets/eightythousand.scss
+++ b/app/assets/stylesheets/eightythousand.scss
@@ -480,3 +480,7 @@ input[type="email"] {
 .event-booking-request {
   .complete { color: #FF0000 }
 }
+
+.event {
+  .book-place { font-size: 1.2em; }
+}
