--- a/app/views/blog_posts/index.html.haml
+++ b/app/views/blog_posts/index.html.haml
@@ -18,6 +18,10 @@
       &nbsp;
     .span4
       .box.sidebar.blog-sidebar
+        %p
+          .fblike
+            <fb:like href="#{blog_posts_path}" send="false" width="450" show_faces="false"></fb:like>
+
         = render :partial => "subscribe"
         %hr
         = render :partial => "popular_posts"
