--- a/app/views/blog_posts/show.html.haml
+++ b/app/views/blog_posts/show.html.haml
@@ -8,7 +8,10 @@
       &nbsp;
     .span4
       .box.sidebar.blog-sidebar
-        <!--<div class="fb-like" data-href="#{blog_post_url @post}" data-colorscheme="light" data-send="false" data-width="430" data-show-faces="false"></div>-->
+        %p
+          .fblike
+            <fb:like href="#{blog_post_url(@post)}" send="false" width="450" show_faces="false"></fb:like>
+
         = render :partial => "subscribe"
         %hr
         = render :partial => "popular_posts"        
@@ -23,5 +26,3 @@
         %hr
 
         
-
-
