Edited accordion CSS to remove arrow from accordion tables e.g. Carrer-resources

--- a/app/assets/stylesheets/eightythousand.scss
+++ b/app/assets/stylesheets/eightythousand.scss
@@ -476,6 +476,7 @@ input[type="email"] {
 .ui-accordion-content {
   a { color: $link_color !important; }
 }
+.ui-icon { display: none !important; }
 
 .event-booking-request {
   .complete { color: #FF0000 }
