Fixed hardcoded links on from page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,12 +22,12 @@
 <div class="span7">
 <div class="fp-splash">
 <p>We’re here to help. At 80,000 Hours we share <strong>free, evidence-based advice</strong> on careers that make a difference.</p>
-<a class="fp-splash-find-out-more btn btn-primary btn" href="http://localhost:3000/about-us">Learn more</a></div>
+<a class="fp-splash-find-out-more btn btn-primary btn" href="/about-us">Learn more</a></div>
 </div>
 </div>
 </div>
 
-<div class="span3"><a href="http://80000hours.org/about-us"><img alt="career advice speech bubble" src="http://i.imgur.com/fp9yQ.jpg" style="padding-top:6em;" width="560"></a></div>
+<div class="span3"><a href="/about-us"><img alt="career advice speech bubble" src="http://i.imgur.com/fp9yQ.jpg" style="padding-top:6em;" width="560"></a></div>
 
 <div class="span12">
 <div class="row"><hr></div>
@@ -35,15 +35,15 @@
 </div>
 
 <div class="row">
-<div class="span4"><a href="http://localhost:3000/career-advice">
+<div class="span4"><a href="/career-advice">
 <img alt="advice on careers that make a difference" height="48" src='/assets/icons/multibranch.svg' width="51">
 </a></div>
 
-<div class="span4"><a href="http://localhost:3000/our-community">
+<div class="span4"><a href="/our-community">
 <img alt="community of people making a difference" height="48" src="/assets/icons/community.svg" width="58">
 </a></div>
 
-<div class="span4"><a href="http://80000hours.org/">
+<div class="span4"><a href="/">
 <img alt="mailing list about how to make the world a better place" height="48" src="/assets/icons/speech_bubble_square.svg" width="70">
 </a></div>
 </div>
@@ -51,9 +51,9 @@
 <div class="row">
 <div class="span3">
 <div class="fp-splash">
-<h2 id="career_advice"><a href="http://localhost:3000/career-advice">Career advice</a></h2>
+<h2 id="career_advice"><a href="/career-advice">Career advice</a></h2>
 
-<p>Most people want careers that make a difference. But it’s not easy to get started. How can you have more impact with your career? <a href="http://localhost:3000/career-advice">Learn more</a> or <a href="http://80000hours.org/request-a-career-advice-session/">book a one-on-one advice session</a>.</p>
+<p>Most people want careers that make a difference. But it’s not easy to get started. How can you have more impact with your career? <a href="/career-advice">Learn more</a> or <a href="/request-a-career-advice-session/">book a one-on-one advice session</a>.</p>
 </div>
 </div>
 
@@ -63,8 +63,8 @@
 
 <div class="span3">
 <div class="fp-splash">
-<h2 id="our_community"><a href="http://localhost:3000/our-community">Our community</a></h2>
-<p>Join our community of <%= EtkhProfile.all.size %> members who all want to use their career to make the world a better place. <a href="http://80000hours.org/join">Become a member</a>, find out more about <a href="http://80000hours.org/our-community">our community</a>, or post a question on our <a href="http://80000hours.org/discussion">discussion forum</a>.</p></div>
+<h2 id="our_community"><a href="/our-community">Our community</a></h2>
+<p>Join our community of <%= EtkhProfile.all.size %> members who all want to use their career to make the world a better place. <a href="/join">Become a member</a>, find out more about <a href="/our-community">our community</a>, or post a question on our <a href="/discussion">discussion forum</a>.</p></div>
 </div>
 
 <div class="span1">
@@ -81,7 +81,7 @@
 	<br/>
 </div>
 
-<div id="mc_embed_signup"><a class="social-btn-facebook" href="http://www.facebook.com/80000Hours">Facebook</a><a class="social-btn-twitter" href="http://www.twitter.com/80000Hours">Twitter</a><a class="social-btn-reddit" href="http://reddit.com/r/EffectiveAltruism">Reddit</a><a class="social-btn-rss" href="http://localhost:3000/blog/feed.atom">RSS</a></div></div>
+<div id="mc_embed_signup"><a class="social-btn-facebook" href="http://www.facebook.com/80000Hours">Facebook</a><a class="social-btn-twitter" href="http://www.twitter.com/80000Hours">Twitter</a><a class="social-btn-reddit" href="http://reddit.com/r/EffectiveAltruism">Reddit</a><a class="social-btn-rss" href="/blog/feed.atom">RSS</a></div></div>
 </div>
 </div>
 
