--- a/app/views/comment_mailer/new_comment.text.haml
+++ b/app/views/comment_mailer/new_comment.text.haml
@@ -4,5 +4,9 @@
 = "#{@commenter_name} just made a comment on a post you commented on: #{@comment_post_title} ( #{@comment_post_url}#comments )"
 :plain
 
+= "Don't want to receive emails about this? Edit your notification settings:"
+= "#{@edit_account_path}"
+:plain
+
 Best regards,
 80000hours.org
