--- a/app/views/blog_posts/_voting.html.haml
+++ b/app/views/blog_posts/_voting.html.haml
@@ -1,7 +1,12 @@
 .voting
   - vote = Vote.by_blog_post(post).by_user(current_user).first
-  - upvoted   = vote.nil? ? false : vote.positive
-  - downvoted = vote.nil? ? false : !vote.positive
+  - if user_signed_in?
+    - upvoted   = vote.nil? ? false : vote.positive
+    - downvoted = vote.nil? ? false : !vote.positive
+  - else
+    - upvoted = false
+    - downvoted = false
+  
   .arrow{ :id => "up-vote-#{post.id}", :class => (upvoted ? 'voted' : 'notvoted') }
     = link_to "<i class='icon-arrow-up'></i>".html_safe,
               { :controller => :votes, :action => :new, :up => true, :blog_post => post.id },
