Introduced comment threading on blog comments

--- a/app/views/blog_posts/_blog_post.html.haml
+++ b/app/views/blog_posts/_blog_post.html.haml
@@ -42,10 +42,11 @@
       .page-header
         %h4 Comments
       #display-comments
-        = render blog_post.comments.order("created_at ASC")
+        -#= render blog_post.comments.order("created_at ASC")
+        = render :partial => "comments/comment", :collection => blog_post.comments.order("created_at ASC")
 
       #new-comment
-        - @comment = Comment.new( blog_post_id: blog_post.id )
+        - @comment = Comment.new( commentable_id: blog_post.id, commentable_type: BlogPost )
         - if !current_user
           .alert.alert-info
             .alert-heading
