--- a/app/views/blog_posts/show.html.haml
+++ b/app/views/blog_posts/show.html.haml
@@ -20,7 +20,7 @@
         %hr
         = render :partial => "disclaimer"
         %hr
-        = render :partial => "latest_comments"
+        -#= render :partial => "latest_comments"
         %hr
         = render :partial => "tag_cloud"
         %hr
