--- a/app/views/blog_posts/index.html.haml
+++ b/app/views/blog_posts/index.html.haml
@@ -26,7 +26,7 @@
         %hr
         = render :partial => "disclaimer"
         %hr
-        = render :partial => "latest_comments"
+        -#= render :partial => "latest_comments"
         %hr
         = render :partial => "tag_cloud"
         %hr
