--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for( @comment, remote: true, html: { id: 'comment-form' } ) do |f|
+= simple_form_for([@parent, @comment], remote: true, html: { id: 'comment-form' } ) do |f|
   .errors.alert.alert-danger
   = f.input :body, placeholder: "Add a comment...", label: false, input_html: { style: 'height:100px;width:90%', id: 'comment-body' }
   - if !current_user
@@ -9,6 +9,6 @@
 
   = button_tag "Post comment", :disable_with => "Please wait...", :class => 'btn btn-large'
 
-  = f.input :blog_post_id, :as => :hidden
-  = f.input :discussion_post_id, :as => :hidden
+  = f.input :commentable_id, :as => :hidden
+  = f.input :commentable_type, :as => :hidden
 .comment-form-message
