Fixed destroy action on threaded comments

--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,5 +1,8 @@
 <%- if @comment.destroyed? %>
-  $('#comment-<%= @comment.id %>').fadeOut('fast')
+	$('#comment-<%= @comment.id %>').fadeOut('fast');
 <%- else %>
-  $('#comment-<%= @comment.id %>').prepend("<div class='alert alert-danger'>Sorry, something went wrong!</div>")
+	//reload partial of deleted comment
+	var render_partial_html = "<%= escape_javascript(render :partial => 'comments/comment', :collection => @comment.commentable.comments.order('created_at ASC')) %>";
+	var comment_id = "<%= j @comment_id.to_s %>"
+	$('#comment-' + comment_id).parent().html(render_partial_html);
 <%- end %>
