--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -20,23 +20,25 @@
     .clearfix
     .body
       = markdown comment.body
-  .reply
-    -#= link_to 'reply', '#comment-form', class: "reply-link"
-    %p.reply-link reply
-    
-    #reply-form{ style: "display: none" }
-      - @comment = Comment.new( commentable_id: comment.id, commentable_type: "Comment" )
-      = render partial: "comments/form"
+  - unless comment.body == "This comment has been deleted"
+    .reply
+      -#= link_to 'reply', '#comment-form', class: "reply-link"
+      %p.reply-link reply
+      
+      #reply-form
+        - @comment = Comment.new( commentable_id: comment.id, commentable_type: "Comment" )
+        = render partial: "comments/form"
 
-      %script
-        $(document).ready( function() {
-        $("#comment-#{comment.id}").children(".reply").children(".reply-link").toggle( function() {
-        $("#comment-#{comment.id}").children(".reply").children("#reply-form").fadeIn();
-        }, function () {
-        $("#comment-#{comment.id}").children(".reply").children("#reply-form").fadeOut();
-        });
-        });
+        %script
+          $(document).ready( function() {
+          $("#comment-#{comment.id}").children(".reply").children(".reply-link").toggle( function() {
+          $("#comment-#{comment.id}").children(".reply").children("#reply-form").fadeIn();
+          }, 
+          function () {
+          $("#comment-#{comment.id}").children(".reply").children("#reply-form").fadeOut();
+          });
+          });
+  %hr
 
-  -# unless comment.comments.empty?
   #display-comments
     = render :partial => "comments/comment", :collection => comment.comments.order("created_at ASC")
