Styling of comments on blog posts

--- a/app/views/blog_posts/_blog_post.html.haml
+++ b/app/views/blog_posts/_blog_post.html.haml
@@ -41,26 +41,16 @@
     #comments
       .page-header
         %h4 Comments
-      #display-comments
-        = render :partial => "comments/comment", :collection => blog_post.comments.order("created_at ASC")
+      #body
+        .display-comments
+          = render :partial => "comments/comment", :collection => blog_post.comments.order("created_at ASC")
 
-      #new-comment
-        - @comment = Comment.new( commentable_id: blog_post.id, commentable_type: "BlogPost" )
-        - if !current_user
-          .alert.alert-info
-            .alert-heading
-              %h4 Hello!
-            .alert-body
-              %p
-                If you'd like to comment then please
-                #{link_to 'sign in', new_user_session_path}
-                if you are an 80,000 Hours member,
-                or fill in your name and email below.
-
-        = render 'comments/form'
-    %hr
-    .center
-      %p
-        = link_to '<i class="icon-list"></i> Take me back to the blog'.html_safe, blog_posts_path
-      %p
-        = link_to '<i class="icon-home"></i> Take me to the homepage'.html_safe, '/'
+        #new-comment
+          - @comment = Comment.new( commentable_id: blog_post.id, commentable_type: "BlogPost" )
+          = render 'comments/form'
+      %hr
+      .center
+        %p
+          = link_to '<i class="icon-list"></i> Take me back to the blog'.html_safe, blog_posts_path
+        %p
+          = link_to '<i class="icon-home"></i> Take me to the homepage'.html_safe, '/'
