--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -1,57 +1,97 @@
 @import "shared/partials";
 
-#comments{
+$main_comments_background_colour: #F0FFF0;
+$even_level_nested_comments_border_colour: #E6FFE6;
+$odd_level_nested_comments_background_colour: #E9F8FF;
+$odd_level_nested_comments_border_colour: #DFF4FF;
+
+#comments #body {
+  background-color: $main_comments_background_colour;
+
   .comment {
-    .avatar {
-      float: left;
-      @include rounded_borders(#ccc, 1px, 3px);
-      @include box_shadow(#ccc, 0px, 0px, 5px);
-      width:  48px;
-      height: 48px;
-      img {
-        vertical-align: middle;
-        position: absolute;
-        clip:rect(0px,48px,48px,0px);
+    .core {
+      padding: 5px;
+      margin-top: 10px;
+      margin-bottom: 5px;
+
+      .avatar {
+        float: left;
+        @include rounded_borders(#ccc, 1px, 3px);
+        @include box_shadow(#ccc, 0px, 0px, 5px);
         width:  48px;
+        height: 48px;
+        img {
+          vertical-align: middle;
+          position: absolute;
+          clip:rect(0px,48px,48px,0px);
+          width:  48px;
+        }
+      }
+
+      .content {
+        margin-left: 60px;
+        .header {
+          padding-bottom: 10px;
+          border-bottom: 1px solid #efefef;
+          .name {
+            font-weight: bold;
+          }
+          .date {
+            color: #999;
+          }
+          .actions {
+            font-size: 0.9em;
+            font-style: italic;
+            float:right;
+          }
+        }
+
+        .body {
+          padding-top: 10px;
+        }
+      }
+
+      .reply {
+        .reply-link {
+          margin-left: 25px;
+        }
+        .reply-form {
+          display: none;
+        }
       }
     }
 
-    .content {
-      margin-left: 60px;
-      .header {
-        padding-bottom: 10px;
-        border-bottom: 1px solid #efefef;
-        .name {
-          font-weight: bold;
-        }
-        .date {
-          color: #999;
-        }
-        .actions {
-          font-size: 0.9em;
-          font-style: italic;
-          float:right;
-        }
-      }
 
-      .body {
-        padding-top: 10px;
-        padding-bottom: 10px;
-      }
+    .nested-comment {
+      //nested comments with an even depth value(eg 2,4) have same colour scheme as main comments
+      background-color: $main_comments_background_colour;
+      @include rounded_borders($even_level_nested_comments_border_colour, 4px, 3px);
 
+      //padding for all nested comments
+      .core { 
+        padding-left: 10px;
+        padding-right: 10px;
+      }
     }
 
-    /*@include rounded_borders(#ccc, 1px, 3px);*/
-    padding: 5px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    //nested comments with an odd value(eg 1,3) have an alternate colour scheme
+    //This overrides colour rules set in nested-comment class above
+    .display-comments .d1,
+    .d1 .d3,
+    .d1 .d3 .d5 {
+      background-color: $odd_level_nested_comments_background_colour;
+      @include rounded_borders($odd_level_nested_comments_border_colour, 4px, 3px);
+    }
+
+    //only indent margin for first three levels
+    .d1, .d2, .d3 { margin-left: 30px; }
   }
+
+  //set font-size of all nested comments
+  .d0 > .display-comments { font-size: 0.92em; }
+
 
   .errors { display: none; }
 
-  .email_confirmation {
-    display: none;
-  }
-
-  .replytext { display: none; }
+  .email_confirmation { display: none; }
 }
