--- a/app/views/blog_posts/_blog_post.html.haml
+++ b/app/views/blog_posts/_blog_post.html.haml
@@ -9,7 +9,7 @@
           = link_to 'Delete post', blog_post_path, :confirm => "Are you sure you want to delete the post '#{blog_post.title}'?", :method => :delete, :class => 'btn btn-mini btn-danger'
 
     .heading
-      = render :partial => 'voting', :locals => { :post => blog_post }
+      = render :partial => 'shared/voting', :locals => { :post => blog_post, :post_type => "BlogPost" }
       %h1
         = blog_post.title
         - if blog_post.draft
