--- a/app/views/blog_posts/_display_teaser.html.haml
+++ b/app/views/blog_posts/_display_teaser.html.haml
@@ -1,6 +1,6 @@
 .entry
   .heading
-    = render :partial => 'voting', :locals => { :post => post }
+    = render :partial => 'shared/voting', :locals => { :post => post, :post_type => "BlogPost" }
     %h2
       %a{:href => blog_post_path(post)}
         = post.title
