--- a/app/views/discussion_posts/_discussion_header.html.haml
+++ b/app/views/discussion_posts/_discussion_header.html.haml
@@ -1,6 +1,6 @@
 .entry
   .heading
-    = render :partial => 'discussion_posts/voting', :locals => { :post => post }
+    = render :partial => 'shared/voting', :locals => { :post => post, :post_type => "DiscussionPost" }
 
     %h3
       %a{:href => discussion_post_path(post)}
