Added comment threading to forum; edited layout of forum; reintroduced comment mailing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,7 @@
  *= require active_admin
  *= require authentications
  *= require blog
+ *= require forum
  *= require eightythousand 
  *= require donations
  *= require etk_applications
