--- a/app/views/discussion_post_mailer/new_comment.text.haml
+++ b/app/views/discussion_post_mailer/new_comment.text.haml
@@ -4,7 +4,7 @@
 = "#{@commenter_name} just made a comment on your discussion post: #{@comment_post_title} ( #{@comment_post_url} )"
 :plain
 
-= "Don't want to receive emails about this? Edit your notification settings:"
+= "Don't want to receive emails about this? Change your notification settings:"
 = "#{@edit_account_path}"
 :plain
 
