--- a/app/views/discussion_posts/show.html.haml
+++ b/app/views/discussion_posts/show.html.haml
@@ -1,4 +1,18 @@
-.alert.alert-info
-  This is a #{link_to 'Discussion', discussion_posts_path} post.
- 
-= render @post
+.blog
+  .forum
+    .row
+      .span7
+        %br
+        = render @post
+      .span1
+        &nbsp;
+      .span4
+        .box.sidebar.blog-sidebar
+          = render :partial => "blog_posts/subscribe"
+          %hr
+          = render :partial => "blog_posts/popular_posts"        
+          %hr
+          = render :partial => "blog_posts/latest_discussion_posts"
+          %hr
+          = render :partial => "blog_posts/latest_comments"
+          %hr
