--- a/app/views/etkh_profiles/edit.html.haml
+++ b/app/views/etkh_profiles/edit.html.haml
@@ -18,7 +18,7 @@
         .box.sidebar
           %h2 Public profile
           %p
-            By creating a public profile, you can help inspire new people to join 80k.
+            By creating a public profile, you can help inspire new people to join 80,000 Hours.
             Seeing example members is a really effective way to persuade others to join.
             You can also make yourself known to our community, which might lead to
             connections with other effective altruists.
