--- a/app/views/etkh_profiles/_backup_form.html.haml
+++ b/app/views/etkh_profiles/_backup_form.html.haml
@@ -36,12 +36,12 @@
 
   = field_set_tag "Private profile fields: only visible to other 80,000 Hours members" do
     = ep.input :skills_knowledge_share,
-               label: "What skills and knowledge would you be willing to share with other 80k members?",
+               label: "What skills and knowledge would you be willing to share with other 80,000 Hours members?",
                placeholder: "this will not be publicy visible",
                input_html: { rows: '10' } 
 
     = ep.input :skills_knowledge_learn,
-               label: "What skills and knowledge would you like to gain from other 80k members?",
+               label: "What skills and knowledge would you like to gain from other 80,000 Hours members?",
                placeholder: "this will not be publicy visible",
                input_html: { rows: '10' } 
 
